--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>com.google.gwt</groupId>
+     <artifactId>gwt-servlet</artifactId>
+     <version>2.8.2</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
